more changes for app crash fixes

--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -342,7 +342,7 @@
                        Foreground="Black"
                        FontWeight="SemiBold"
                              HorizontalContentAlignment="Right"      
-                       Content="Navi Mumbai, Maharashtra" />
+                       Content="Mumbai" />
                         </StackPanel>
                     </Grid>
 
