--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -541,7 +541,7 @@
                 </Grid>
             </Grid>
             <StackPanel Orientation="Horizontal" Margin="10,5,0,0">
-                <Button  BorderThickness="1"  Margin="0,0,10,0" Height="35" Width="130"  BorderBrush="Black" Content="CANCEL" Command="{Binding CancelChanges_Comand}" Foreground="White" Background="#A9ABB1" >
+                        <Button  BorderThickness="1"  Margin="0,0,10,0" Height="35" Width="130"  BorderBrush="Black" Content="CANCEL" Command="{Binding CancelChanges_Command}" Foreground="White" Background="#A9ABB1" >
                     <Button.Resources>
                         <Style TargetType="{x:Type Button}">
                             <Style.Resources>
