--- a/ideaForge/Pages/LoginPages/Signup.xaml
+++ b/ideaForge/Pages/LoginPages/Signup.xaml
@@ -153,7 +153,8 @@
                     NotifyOnValidationError=True, 
                     ValidatesOnDataErrors=True
                     }" x:Name="txtName"  
-                         PreviewTextInput="txtName_PreviewTextInput">
+                         PreviewTextInput="txtName_PreviewTextInput"
+                         PreviewKeyDown="NoSpace_PreviewKeyDown1">
                    
                 </TextBox>
                 <!--<Label Margin="15,0,0,0" x:Name="lblName" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>-->
@@ -265,7 +266,8 @@
                     Text="{Binding RegisterModel.organizationName,
                     UpdateSourceTrigger=PropertyChanged ,
                     NotifyOnValidationError=True, 
-                    ValidatesOnDataErrors=True}" x:Name="TxtOrganization" />
+                    ValidatesOnDataErrors=True}" x:Name="TxtOrganization" 
+                    PreviewKeyDown="NoSpace_PreviewKeyDown2"/>
                 <!--<Label Margin="15,0,0,0" Padding="0" x:Name="lblOrganization"  Content="Please Enter a Valid Organization Name" Foreground="Red" Visibility="Hidden"/>-->
             </StackPanel>
             <StackPanel Grid.Row="6" Orientation="Vertical">
@@ -282,7 +284,9 @@
                 <TextBox 
                     Tag="Enter Department Name"
                     MaxLength="30" 
-                    Text="{Binding RegisterModel.departmentName}"   />
+                    Text="{Binding RegisterModel.departmentName}"  
+                    PreviewKeyDown="NoSpace_PreviewKeyDown3"
+                    x:Name="DepartmentNameTxt"/>
             </StackPanel>
             <StackPanel  Grid.Row="7" Orientation="Vertical">
                 <Label HorizontalAlignment="Left" Margin="15,0,0,0" FontSize="20" FontFamily="Segoe UI" FontWeight="SemiBold">
